# extensible-streaming

./: LICENSE  README.md  extensible-streaming.cabal
Data/Functor/: Effects.hs  Effs.hs
Streaming/: Extensible.hs
examples/: Examples.hs
