name:                extensible-streaming
version:             0.1.0.0
synopsis:            so-called extensible effects for people who actually like Haskell
-- description:         
homepage:            https://github.com/michaelt/extensible-streaming
license:             GPL-3
license-file:        LICENSE
author:              michaelt
maintainer:          what_is_it_to_do_anything@yahoo.com
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Functor.Effs, Streaming.Extensible
  other-extensions:    GADTs, TypeFamilies, TypeOperators, DeriveFunctor, DataKinds, PolyKinds, ScopedTypeVariables, MultiParamTypeClasses, FlexibleInstances, FlexibleContexts, UndecidableInstances, BangPatterns, NoMonomorphismRestriction
  build-depends:       base >=4.8 && <4.9
                       , transformers >=0.4 && <0.5
                       , streaming >= 0.1.4 && < 0.1.4.5
  default-language:    Haskell2010